<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sharemessage">This marvelous colorized image was generated by a project from CPSC 475, Android mobile programming.  Please contact Prof. Keith Perkins at keith.perkins@cnu.edu if you have any questions about our department or the classes we offer or technology in general.</string>
    <string name="shareTitle">Welcome to CNU from the PCSE department!</string>
    <string name="messages_header">messages_header</string>
    <string name="signature_title">signature_title</string>
    <string name="reply_title">reply_title</string>
    <string name="sync_header">sync_header</string>
    <string name="sync_title">synch_title</string>
    <string name="attachment_summary_off">attachment_summary_off</string>
    <string name="attachment_summary_on">attachment_summary_on</string>
    <string name="attachment_title">attachment_title</string>
    <string name="shareSubject">Share Subject</string>
    <string name="shareText">Share Text</string>
    <string name="renderingOptions">Rendering Options</string>
    <string name="renderSummary">Level of Sketchiness and Color Saturation</string>
    <string name="sketchinessDescription">Set the BW threshold, higher numbers correspond to less detail and whiter image.</string>
    <string name="colorSeekDescription">Set Color Saturation, higher numbers correspond to more colorful image.</string>

    <integer name="seek_bar_default">75</integer>
    <integer name="seek_bar_max">100</integer>
    <integer name="seek_bar_min">0</integer>


</resources>